fixed spacing issues when expanding

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 section {
     display: flex;
     flex-wrap: wrap;
-    height: 600px;
-    width: 600px;
+    height: 700px;
+    width: 700px;
     margin-left: 25%;
 }
 
@@ -23,19 +23,20 @@ section>* {
 }
 
 .light_bulb {
-    width: 80px;
-    height: 80px;
     border-radius: 50%;
-    border: 2px solid white;
-    box-shadow: var(--box-shadow);
-
 }
 
 main {
     background-image: url(https://images.unsplash.com/photo-1553095066-5014bc7b7f2d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80);
+    height: 700px;
 }
 
 @media screen and (max-width:576px) {
+
+    section {
+        height: 250px;
+        width: 250px;
+    }
 
     .light_bulb {
         height: 50px;
@@ -45,6 +46,10 @@ main {
 }
 
 @media screen and (max-width:768px) and (min-width: 577px) {
+    section {
+        height: 300px;
+        width: 300px;
+    }
 
     .light_bulb {
         height: 80px;
@@ -55,6 +60,10 @@ main {
 }
 
 @media screen and (max-width: 992px) and (min-width:769px) {
+    section {
+        height: 600px;
+        width: 600px;
+    }
 
     .light_bulb {
         height: 150px;
